# mbti_personality_prediction

./: README.md  setup.cfg
src/mbti_personality_prediction/: __init__.py  decoded.dictionary  introvert.scaler  judging.scaler  sensing.scaler  thinking.scaler
