[metadata]
name = mbti-personality-prediction
version = 1.0.0
author = Rey Victor Mendillo
author_email = admin@rvmendillo.com
description = Predicts MBTI personality type from one's writing style through Linguistic Inquiry and Word Count
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rvmendillo/mbti_personality_prediction
project_urls =
    Bug Tracker = https://github.com/rvmendillo/mbti_personality_prediction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
install_requires =
	 pandas
   liwc
   nltk
python_requires = >=3.6

[options.packages.find]
where = src
